@@ -48,6 +48,7 @@ Changes for 1.3.5.2
 -Fixed vanilla bug: World map music won't resume after going through the warp that leads to no music points or the music point with the same song
 -Fixed the improper custom music change when going through the warp on the world map
 -Fixed vanilla bug: Offscreen NPC can now respawn during the stopwatch freeze
+-Added Thwomp (NPC-37) behavior compatibility with SMBX 1.0.x
 
 Changes for 1.3.5.1
 -Episodes and battle levels lists now loading in the separated thread with a progress showing
